<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectedConcertPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow android:padding="5dip"
        tools:ignore="UselessParent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:text="@string/ticket_details"
            android:textColor="#0ff"
            android:textSize="25sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/firstName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/firstName"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/lastName"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lastName"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/concertTitle"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/concertTitle"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/ticketCategory"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ticketCategory"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/concertLocation"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/concertLocation"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            />
    </TableRow>
    <TableRow android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cancelTicketButton"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>


</TableLayout>